--- a/styles.css
+++ b/styles.css
@@ -109,9 +109,14 @@ grid-column-end: span 4;
 }
 
 @media only screen and (max-width: 600px){
+  body {
+    background-color: var(--main-color);
+  }
   .container {
     width: 100%;
     height: 100%;
     margin: 0;
+    box-shadow: none;
+    border-radius: 0px;
   }
 }
