--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,14 @@ body {
 }
 
 button {
+
   background: none;
-	color: inherit;
-	border: none;
+  color: inherit;
+  border: none;
   padding: 0;
   margin: 2%;
-	cursor: pointer;
-	outline: inherit;
+  cursor: pointer;
+  outline: inherit;
   font-family: inherit;
   font-weight: 300;
   font-size: 1.4em;
@@ -35,14 +36,14 @@ button:hover {
 }
 
 button:active {
-background-color: #f78a8a;
-color: var(--main-color);
-transform: translateY(4px);
+  background-color: #f78a8a;
+  color: var(--main-color);
+  transform: translateY(4px);
 }
 
 
 .container {
-  background-color: var(--main-color);
+    background-color: var(--main-color);
     position: absolute;
     margin: auto;
     top: 0;
@@ -71,7 +72,7 @@ transform: translateY(4px);
   text-align: right;
 }
 
-#process{
+#calculation{
   font-weight: 300;
   font-size: 1.1em;
 
@@ -93,22 +94,16 @@ transform: translateY(4px);
 }
 
 .equal {
-grid-column-start: 0;
-grid-column-end: span 4;
-
-
+  grid-column-start: 0;
+  grid-column-end: span 4;
 }
-.equal:hover {
-
-
-}
+.
 .equal:active {
   background-color: var(--main-color);
   color: var(--contrast-color);
-
 }
-
-@media only screen and (max-width: 600px){
+/* make calculator filling display on mobile  */
+@media only screen and (max-width: 450px){
   body {
     background-color: var(--main-color);
   }
